           and --header*).
* 20191023 Ensure "main" choice defined first in each option's list of
           aliases because the first item is used for errors.
* 20191026 Deprecate -g option.  Change current implementation so it is
           rewritten to `--data -` before option processing. Any occurrence
           of `--data` will cause -g to be discarded. "no-" prefix will not
           negate.
* 20191026 Update --data, --body, --attach-body, and --attach so that a
           leading '@' forces the argument to be a filename. Deprecate
           previous "if it happens to be an openable file" behavior
* 20191027 Do service name resolution on --local-port if non-numeric
* 20191028 Fix bug setting filename in attachments when '@' prefix used
* 20191028 Add deprecation warning system.  Warnings in code and a table
           of deprecated functionality and removal dates in documentation.
* 20191111 Switch Getopt to process an arbitrary list instead of manipulating
           ARGV for each call.
* 20191111 Check to see if there are any entries left in the option list
           after each stage of option processing and error if so.
* 20191111 Rework the command line reconstruction so that options that
           don't take an argument do not include one in the reconstruction.
* 20191111 Unexpected argument format for --timeout now errors and exits
           instead of silently using default timeout.
* 20191111 Document that --timeout argument can use 'h' as a modifier.
* 20191111 Docs: Reorganize Terms and Conventions, add Option/Arg/[]/<>.
* 20191112 Docs: Be consistent in how <> and [] are used in argument docs.
* 20191113 Docs: Define option types and assign to every option.
* 20191113 Docs: General typo and consistency fixes.
* 20191122 Docs: Establish project standards for POD formatting and
           make first pass at applying.
* 20191220 Docs: Fix incorrect example used in --attach-body definition.