@@ -35,10 +35,10 @@
     <div class="row">
         <!--
         <p>
-        <a href="index.html">Main</a> :: 
-        <a href="about.html">About</a> :: 
-        <a href="download.html">Download</a> :: 
-        <a href="docs.html">Documentation</a> :: 
+        <a href="index.html">Main</a> ::
+        <a href="about.html">About</a> ::
+        <a href="download.html">Download</a> ::
+        <a href="docs.html">Documentation</a> ::
         <a href="contact.html">Interact</a>
         </p>
         -->
@@ -47,8 +47,8 @@
     <div class="row">
         <h4>About</h4>
         <p>
-            Swaks is a featureful, flexible, scriptable, transaction-oriented SMTP test tool written 
-            and maintained by <a href="https://www.jetmore.org/john/">John Jetmore</a>.  
+            Swaks is a featureful, flexible, scriptable, transaction-oriented SMTP test tool written
+            and maintained by <a href="https://www.jetmore.org/john/">John Jetmore</a>.
             It is free to use and <a href="latest/LICENSE.txt">licensed</a> under the GNU GPLv2.
         </p>
         <p><b>Features include:</b></p>
@@ -65,16 +65,17 @@
     <div class="row">
         <h4>Download</h4>
         <p>
-            The latest version of Swaks is <b>20190914.0</b>, which can be downloaded as a <a href="files/swaks-20190914.0.tar.gz">package</a> or a <a href="files/swaks-20190914.0/swaks">standalone script</a>.<br/>
-            There is also a <a href="versions.html">versions page</a> which lists every released version of Swaks, complete with changelogs and download links.
+            The latest version of Swaks is <b>20190914.0</b> (<a href="https://www.jetmore.org/john/blog/2019/09/swaks-release-20190914-0-available/">announcement</a>), which can be downloaded as a <a href="files/swaks-20190914.0.tar.gz">package</a> or a <a href="files/swaks-20190914.0/swaks">standalone script</a>.<p/>
+            The <a href="versions.html">versions page</a> lists every released version of Swaks, complete with changelogs and download links.
         </p>
     </div>
 
     <div class="row">
         <h4>Documentation</h4>
         <p>
-            The <a href="latest/doc/ref.txt">reference documentation</a> from the latest release, 
-            which includes quick-start examples, is available.  
+            The reference documentation from the latest release,
+            which includes quick-start examples, is available as <a href="latest/doc/ref.txt">plain text</a> and <a href="https://github.com/jetmore/swaks/blob/v20190914.0/doc/base.pod">rendered</a>.
+            The documentation from each release is available from the <a href="versions.html">versions page</a>.
             There is also an <a href="faq.html">Occasionally Asked Questions</a> document.
         </p>
     </div>
@@ -85,23 +86,12 @@
     </div>
 
     <div class="row">
-        <h4>News <span id="rss">(<a href="https://www.jetmore.org/john/blog/c/swaks/feed/">rss</a>)</span></h4>
-        <ul>
-            <li>2019-09-14 - <a href="https://www.jetmore.org/john/blog/2019/09/swaks-release-20190914-0-available/">Swaks Release 20190914.0 Available</a></li>
-            <li>2018-11-04 - <a href="https://www.jetmore.org/john/blog/2018/11/swaks-release-20181104-0-available/">Swaks Release 20181104.0 Available</a></li>
-            <li>2017-01-01 - <a href="https://www.jetmore.org/john/blog/2017/01/swaks-release-20170101-0-available/">Swaks Release 20170101.0 Available</a></li>
-            <li>2013-02-09 - <a href="https://www.jetmore.org/john/blog/2013/02/swaks-release-20130209-0-available/">Swaks Release 20130209.0 Available</a></li>
-            <li>2012-03-20 - <a href="https://www.jetmore.org/john/blog/2012/03/swaks-release-20120320-0-available/">Swaks Release 20120320.0 Available</a></li>
-        </ul>
-    </div>
-
-    <div class="row">
         <h4>Communications</h4>
         <ul>
             <li><a href="mailto:updates-swaks@jetmore.net">Send a mail</a> to receive email when new versions are released</li>
             <li><a href="https://twitter.com/SwaksSMTP">Follow @SwaksSMTP</a> on twitter</li>
             <li><a href="mailto:proj-swaks@jetmore.net">Contact the author</a> - suggestion, tips, patches, feedback, critiques always welcome</li>
-            <li><a href="https://www.jetmore.org/john/blog/c/swaks/">Blog</a> - Swaks-specific blog category (same feed as News section above)</li>
+            <li><a href="https://www.jetmore.org/john/blog/c/swaks/">Blog</a> - Swaks-specific blog category (<a href="https://www.jetmore.org/john/blog/c/swaks/feed/">rss</a> also available)</li>
             <li><a href="https://github.com/jetmore/swaks/issues">Issues</a> - Open an issue for feature requests and bugs</li>
         </ul>
     </div>
