@@ -16,8 +16,9 @@
         code { font-size: 110% }
         pre, code {
             overflow-x: auto;
-            overflow-y: hidden; 
+            overflow-y: hidden;
             white-space: nowrap;
+            font-size: 90%;
         }
         .container { max-width: 600px }
         .header { margin-top: 3% }
@@ -40,10 +41,10 @@
     <div class="row">
         <!--
         <p>
-        <a href="index.html">Main</a> :: 
-        <a href="about.html">About</a> :: 
-        <a href="download.html">Download</a> :: 
-        <a href="docs.html">Documentation</a> :: 
+        <a href="index.html">Main</a> ::
+        <a href="about.html">About</a> ::
+        <a href="download.html">Download</a> ::
+        <a href="docs.html">Documentation</a> ::
         <a href="contact.html">Interact</a>
         </p>
         -->
@@ -51,7 +52,7 @@
     <div class="row">
         <b>Versions</b>
         <p>
-          This page lists every official release of Swaks, from newest to oldest.  All releases include that version's Changes, 
+          This page lists every official release of Swaks, from newest to oldest.  All releases include that version's Changes,
           and newer releases also include a change summary.
         </p>
         <p><a href="./index.html">return to main page</a></p>
@@ -66,8 +67,9 @@
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20190914.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20190914.0/swaks"">script only</a>,
-                <a href="./files/swaks-20190914.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20190914.0/swaks">script only</a>,
+                <a href="./files/swaks-20190914.0/doc/ref.txt">version docs</a> (<a href="https://github.com/jetmore/swaks/blob/v20190914.0/doc/base.pod">rendered</a>),
+                <a href="https://www.jetmore.org/john/blog/2019/09/swaks-release-20190914-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -178,7 +180,8 @@ Notable Bugs Fixed:
 * 20190817 Cleaning up error messages that contained extra newlines
 * 20190817 Remove re-prompting for port when an invalid service name was
            supplied. Just error and exit instead
-> 20190914 released 20190914.0
+* 20191005 Fixed typos in base.pod and recipes.pod
+> 20191006 released 20190914.0
             </code></pre>
         </div>
     </div>
@@ -191,8 +194,9 @@ Notable Bugs Fixed:
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20181104.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20181104.0/swaks"">script only</a>,
-                <a href="./files/swaks-20181104.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20181104.0/swaks">script only</a>,
+                <a href="./files/swaks-20181104.0/doc/ref.txt">version docs</a>,
+                <a href="https://www.jetmore.org/john/blog/2018/11/swaks-release-20181104-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -306,8 +310,9 @@ Notable Bugs Fixed:
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20170101.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20170101.0/swaks"">script only</a>,
-                <a href="./files/swaks-20170101.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20170101.0/swaks">script only</a>,
+                <a href="./files/swaks-20170101.0/doc/ref.txt">version docs</a>,
+                <a href="https://www.jetmore.org/john/blog/2017/01/swaks-release-20170101-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -372,8 +377,9 @@ Notable Bugs Fixed:
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20130209.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20130209.0/swaks"">script only</a>,
-                <a href="./files/swaks-20130209.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20130209.0/swaks">script only</a>,
+                <a href="./files/swaks-20130209.0/doc/ref.txt">version docs</a>,
+                <a href="https://www.jetmore.org/john/blog/2013/02/swaks-release-20130209-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -501,8 +507,9 @@ Notable Bugs Fixed
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20120320.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20120320.0/swaks"">script only</a>,
-                <a href="./files/swaks-20120320.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20120320.0/swaks">script only</a>,
+                <a href="./files/swaks-20120320.0/doc/ref.txt">version docs</a>,
+                <a href="https://www.jetmore.org/john/blog/2012/03/swaks-release-20120320-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -591,8 +598,9 @@ Notable Bugs Fixed
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20111230.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20111230.0/swaks"">script only</a>,
-                <a href="./files/swaks-20111230.0/doc/ref.txt">version docs</a>
+                <a href="./files/swaks-20111230.0/swaks">script only</a>,
+                <a href="./files/swaks-20111230.0/doc/ref.txt">version docs</a>,
+                <a href="https://www.jetmore.org/john/blog/2011/12/swaks-release-20111230-0-available/">announcement</a>
             </p>
             <p>
                 <b>Change Summary:</b>
@@ -730,7 +738,7 @@ Notable Bugs Fixed
             <p>
                 <b>Links:</b>
                 <a href="./files/swaks-20100211.0.tar.gz">distribution</a>,
-                <a href="./files/swaks-20100211.0/swaks"">script only</a>,
+                <a href="./files/swaks-20100211.0/swaks">script only</a>,
                 <a href="./files/swaks-20100211.0/doc/ref.txt">version docs</a>
             </p>
             <p>
